--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/node": "24.0.0",
     "@types/react": "19.1.7",
+    "husky": "^9.1.7",
     "typescript": "5.8.3"
   }
 }
