--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "nextjs14",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://github.com/camel-dev/realtime-metro/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy\" && git subtree push --prefix out origin gh-pages"
+    "predeploy": "npm run build",
+    "deploy": "type nul > out\\.nojekyll && gh-pages -d out --dotfiles --repo https://github.com/camel-dev/realtime-metro.git"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,7 @@
   "devDependencies": {
     "@types/node": "24.0.0",
     "@types/react": "19.1.7",
-    "husky": "^9.1.7",
+    "gh-pages": "^6.3.0",
     "typescript": "5.8.3"
   }
 }
